<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo4"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="fill"
        android:layout_marginTop="20dp"
        android:src="@drawable/img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/titulo5"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="fill"
        android:src="@drawable/img_1"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/titulo6"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="fill"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/titulo7"
        android:textSize="11sp"
        android:textColor="@color/black" />
</LinearLayout>