<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo8"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_gravity="fill"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/titulo9"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="fill"
        android:src="@drawable/img_4"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/titulo10"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="66dp"
        android:layout_gravity="fill"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/titulo11"
        android:textColor="@color/black"
        android:textSize="11sp" />
</LinearLayout>