<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo12"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="fill"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/titulo13"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="fill"
        android:src="@drawable/img_7"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_gravity="center"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/titulo14"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="fill"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/titulo15"
        android:textColor="@color/black"
        android:textSize="11sp" />
</LinearLayout>